# Simple-Calculator-Library

./: .bazelrc  BUILD.bazel  CMakelists.txt  MODULE.bazel  README.md
include/: calculator_lib.h
src/: calculator_lib.cpp
